--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@500&display=swap');
 
-
 *{
     padding: 0px;
     margin: 0px;
@@ -8,6 +7,19 @@
     list-style: none;
     text-transform: uppercase;
     font-family: 'Pixelify Sans', sans-serif;
+}
+
+header{
+    height: 100vh;
+    background-size: cover;
+}
+
+header nav{
+    width: 100%;
+    padding-block: 0.5rem;
+    position: fixed;
+    background: #ff4747;
+    opacity: 1;
 }
 
 body{
@@ -36,18 +48,6 @@ main{
     margin: 0 auto;
 }
 
-@media (min-width: 500px){
-    .container-pokemon{
-        grid-template-columns: 1fr 1fr;
-    }
-}
-
-@media (min-width : 750px){
-    .container-pokemon{
-        grid-template-columns: 1fr 1fr 1fr;
-    }
-}
-
 
 .pokemon{
     border-radius: 10px;
@@ -72,4 +72,28 @@ main{
     font-size: 10rem;
     font-weight: 1000;
     color: #bbbbbb;
+}
+
+@media (min-width: 500px){
+    .container-pokemon{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (min-width : 750px){
+    .container-pokemon{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (max-width : 400px){
+    header{
+        background-image: url(../imagenes/background-min.webp);
+    }
+}
+
+@media (min-width : 401px){
+    header{
+        background-image: url(../imagenes/background.webp);
+    }
 }
