--- a/estilos/style.css
+++ b/estilos/style.css
@@ -9,9 +9,18 @@
     font-family: 'Pixelify Sans', sans-serif;
 }
 
-header{
+body{
+    background-color: #ffd200;
+}
+
+.fondo{
+    object-fit: cover;
     height: 100vh;
-    background-size: cover;
+    width: 100%;
+}
+
+header{
+    box-shadow: 0 0 2rem -0.5px rgba(0, 0, 0, .5);
 }
 
 header nav{
@@ -19,16 +28,26 @@ header nav{
     padding-block: 0.5rem;
     position: fixed;
     background: #ff4747;
-    opacity: 1;
+    z-index: 1;
+}
+.img-nav{
+    padding: 0 1rem 0 1rem;
+    display: flex;
+    justify-content: center;
+}
+.img-nav img{
+    width: 100%;
+    max-width: 8rem;
 }
 
 body{
     min-height: 100vh;
 }
 
-main{
+.main{
     padding: 2rem;
 }
+
 
 .img{
     padding: 0 1rem 0 1rem;
@@ -58,6 +77,7 @@ main{
     text-align: center;
     transition: all 200ms ease;
     cursor: pointer;
+    background-color: #fafafa;
 }
 
 .pokemon:hover{
@@ -86,14 +106,20 @@ main{
     }
 }
 
+@media (min-width : 401px){
+    .fondo-computadora{
+        display: block;
+    }
+    .fondo-celular{
+        display: none;
+    }
+}
 @media (max-width : 400px){
-    header{
-        background-image: url(../imagenes/background-min.webp);
+    .fondo-computadora{
+        display: none;
+    }
+    .fondo-celular{
+        display: block;
     }
 }
 
-@media (min-width : 401px){
-    header{
-        background-image: url(../imagenes/background.webp);
-    }
-}
