--- a/estilos/style.css
+++ b/estilos/style.css
@@ -12,6 +12,7 @@
     list-style: none;
     text-transform: uppercase;
     font-family: 'Pixelify Sans', sans-serif;
+    text-decoration: none;
 }
 
 body{
@@ -35,6 +36,44 @@ header nav{
     background: #ff4747;
     z-index: 1;
 }
+
+.text-generation{
+    text-align: center;
+    color: var(--main-bg-color);
+    font-size: 1.3rem;
+    text-shadow: 3px 3px 0px #3D5AA4;
+    padding: 10px 0px 0px 0px;
+}
+
+.links{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    font-size: 1.5rem;
+    padding: 0px 10px 0px 10px;
+}
+
+.links a{
+    color: var(--main-bg-color);
+    transition: all 200ms ease;
+}
+
+.links a:hover{
+    text-shadow: none;
+    transition: all 200ms ease;
+}
+
+.cat-link{
+    padding: 0px 10px 0px 10px;
+    text-shadow: 3px 3px 0px #3D5AA4;
+    transition: all 200ms ease;
+}
+
+.cat-link:hover{
+    transform: translateY(3px);
+    transition: all 200ms ease;
+}
+
 .img-nav{
     padding: 0 1rem 0 1rem;
     display: flex;
@@ -45,6 +84,7 @@ header nav{
     max-width: 8rem;
 }
 
+
 body{
     min-height: 100vh;
 }
@@ -53,6 +93,36 @@ body{
     padding: 2rem;
 }
 
+.search-container{
+    height: 40px;
+}
+
+.search-form{
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+}
+
+.search{
+    padding: 15px;
+    border-radius: 5px 5px 5px 5px;
+    border-style: none;
+    text-align: center;
+    transition: all 50ms ease;
+    background-color: #1f1f1f;
+    color: #bbbbbb;
+    
+}
+
+.search::placeholder{
+    color: #bbbbbb;
+}
+
+.search:active{
+    padding: 12px;
+    transform: translateY(5px);
+    transition: all 50ms ease;
+}
 
 .img{
     padding: 0 1rem 0 1rem;
@@ -107,6 +177,33 @@ body{
     justify-content: center;
 
 }
+
+footer{
+    min-height: 20vh;
+    background-color: #ff4747;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+}
+footer p{
+    color: var(--main-bg-color);
+    font-size: 1.3rem;
+    text-shadow: 3px 3px 0px #3D5AA4;
+    text-align: center;
+}
+
+footer .container-img{
+    display: flex;
+    justify-content: center;
+}
+
+.img-footer{
+    width: 100%;
+    max-width: 10rem;
+}
+
+
+
 
 @media (min-width: 500px){
     .container-pokemon{
